--- a/recall/src/app/admin/events/events.component.html
+++ b/recall/src/app/admin/events/events.component.html
@@ -54,69 +54,71 @@
     <div>
         <h5 class="eventtext">Create Event</h5>
     </div>
+    <form [formGroup]="eventForm">
     <div class="form-group">
-        <input type="text" id="name" class="form-control" required>
+        <input type="text" id="name" class="form-control" formControlName="eventname" required>
         <label class="form-control-placeholder" for="name">Event Name*</label>
       </div>
       <div class="form-group">
-        <input type="text" id="password" class="form-control" required>
+        <input type="text" id="password" class="form-control" formControlName="organisedby" required>
         <label class="form-control-placeholder" for="password">Organized By*</label>
       </div>
       <div>
         <div class="form-group datetime">
             <label  for="name">Start Date*</label>
-            <input type="date" id="name" class="form-control " required>
+            <input type="date" id="name" class="form-control " formControlName="startdate" required>
            
           </div>
           <div class="form-group datetime">
             <label  for="name">End Date*</label>
-            <input type="date" id="password" class="form-control" required>
+            <input type="date" id="password" class="form-control" formControlName="enddate" required>
           
           </div>
           <div class="form-group datetime">
-            <label  for="name">Start Time*</label>
-            <input type="time" id="name" class="form-control" required>
+            <input type="text" id="name" class="form-control" formControlName="starttime" required>
+            <label class="form-control-placeholder" for="name">Start Time*</label>
     
           </div>
           <div class="form-group datetime">
-            <label  for="name">End Time*</label>
-            <input type="time" id="password" class="form-control" required>
+            <input type="text" id="name" class="form-control" formControlName="endtime" required>
+        <label class="form-control-placeholder" for="name">End Time*</label>
         
           </div>
       </div>
       <div class="form-group">
-        <input type="text" id="password" class="form-control" required>
+        <input type="text" id="password" class="form-control" formControlName="venue" required>
         <label class="form-control-placeholder" for="password">Venue*</label>
       </div>
       <div class="form-group">
-        <input type="text" id="password" class="form-control" >
+        <input type="text" id="password" class="form-control" formControlName="subtext" >
         <label class="form-control-placeholder" for="password">Subtext</label>
       </div>
 
       <div class="form-group">
         <label  for="name">Description Paragraph 1</label>
-        <textarea name="" id="" cols="10" rows="5" class="form-control" ></textarea>  
+        <textarea name="" id="" cols="10" rows="5" class="form-control" formControlName="para1"></textarea>  
       </div>
       <div class="form-group">
         <label  for="name">Description Paragraph 2</label>
-        <textarea name="" id="" cols="10" rows="5" class="form-control" ></textarea>
+        <textarea name="" id="" cols="10" rows="5" class="form-control" formControlName="para2"></textarea>
       </div>
       <div class="form-group">
         <label  for="name">Description Paragraph 3</label>
-        <textarea name="" id="" cols="10" rows="5" class="form-control" ></textarea>
+        <textarea name="" id="" cols="10" rows="5" class="form-control" formControlName="para3"></textarea>
       </div>
       <div class="form-group">
         <label  for="name">Description Paragraph 4</label>
-        <textarea name="" id="" cols="10" rows="5" class="form-control" ></textarea>
+        <textarea name="" id="" cols="10" rows="5" class="form-control" formControlName="para4" ></textarea>
       </div>
 
     <div class="form-group ">
-      <label  for="name">Upload Images</label>
-      <input type="file" id="password" class="form-control" >
+      <label  for="name" >Upload Images</label>
+      <input type="file" (change)="onFileChange($event)" id="password" class="form-control" >
   
     </div>
+    </form>
     <div class="but">
-        <button class="cevent">Create Event</button>
+        <button class="cevent" (click)='generateevent(eventForm.value)'>Create Event</button>
     </div>
 </div>
 
@@ -125,9 +127,3 @@
 </div>
 
 </div>
-<script>
-  $(document).on('click', '#name', function(){
-    console.log("clicked");
-  
-  });
-</script>
