--- a/recall/src/app/admin/adminaboutus/adminaboutus.component.css
+++ b/recall/src/app/admin/adminaboutus/adminaboutus.component.css
@@ -98,7 +98,7 @@
   }
   .but{
     float: right;
-    margin-top: -7%;
+
     margin-right: 10%;
     width: 17%;
   }
@@ -108,6 +108,7 @@
     margin: 2%;
     padding: 4px 16px;
     display: inline-block;
+    border-radius: 5px;
   }
   .createmessage{
 
@@ -123,4 +124,38 @@
   .creatediv{
  background-color: white;
  margin: 10px;
+  }
+  .new{
+    color: #fff;
+    background-color: #28a745;  
+  }
+  .new:hover{
+    background-color: green;
+  }
+  .cancelbut{
+    color: #215;
+    background-color: transparent;
+    border: 1px solid #215;
+  }
+  .head{
+    background: white;
+    font-size: 29px;
+    margin: 10px;
+    padding: 8px;
+  }
+  .subtext{
+    font-size: 14px;
+  }
+  .success{
+    text-align: center;
+    font-size: 24px;
+    /* position: absolute; */
+    /* border: 1px solid; */
+    padding: 10px;
+    color: green;
+    background-color: lightgreen;
+    border-radius: 5px;
+  }
+  button:focus{
+    outline: none;
   }
