--- a/recall/src/app/alumni/gallary/gallary.component.css
+++ b/recall/src/app/alumni/gallary/gallary.component.css
@@ -28,12 +28,11 @@ button:focus{
     padding: 20px;
 }
 #images{
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    width: 48%;
+   
     height: 220px;
-    margin: 15px 0px 0px 10px;
+    width: 100%;
 }
-#images:hover{
+images:hover{
     transform: scale(1.05);
 }
 .row {
@@ -78,4 +77,23 @@ button:focus{
     width: 60%;
     /* top: 18%; */
     margin-top: -44px;
+  }
+  .content {
+ 
+    position: relative;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 10px 10px;
+  }
+  .each{
+    display: inline-block;
+    width: 48%;
+    margin: 1%;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  }
+  .name{
+font-size: 24px;
+margin: 0px;
   }
