--- a/recall/src/app/alumni/alumnichapters/alumnichapters.component.css
+++ b/recall/src/app/alumni/alumnichapters/alumnichapters.component.css
@@ -93,3 +93,26 @@ button:focus{
     font-size: 17px;
     font-weight: 200;
 }
+.loading{
+    width: 100%;
+    overflow: hidden;
+}
+
+.loading2{
+    position: relative;
+    width:40%;
+    height: 2px;
+    animation: animate 3s linear infinite;
+}
+@keyframes animate{
+    0%{
+        left: -50vw;
+    background-color: red;}
+    50%{
+        left: 50vw;
+    background-color: #DC143C;}
+    100%{
+        left: 100vw;
+        background-color: red;
+    }
+}
