--- a/recall/src/app/alumni/alumnidirectory/alumnidirectory.component.html
+++ b/recall/src/app/alumni/alumnidirectory/alumnidirectory.component.html
@@ -1,3 +1,7 @@
+<div class="progress" *ngIf='loading'>
+   <div class="indeterminate"></div>
+ </div>
+ 
 <div class="main">
     <div class="top">
       <div class="bar"></div>
