--- a/recall/src/app/alumni/givingtous/givingtous.component.css
+++ b/recall/src/app/alumni/givingtous/givingtous.component.css
@@ -46,22 +46,36 @@
 }
 
 .eventsDiv{
-    padding: 10px;
+    display: inline-block;
+    width: 48%;
     box-shadow: 1px 1px 3px 0 #858585;
     margin-top: 15px;
     font-family: sans-serif;
+     transition: .2s ease-in;
+     margin: 1%;
+}
+.eventsDiv:hover{
+    position: relative;
+    top: -5px;
+    cursor: pointer;
+}
+.imgdiv{
+    height: 200px;
+}
+.eacheventlist{
+    padding: 10px;
 }
 .eventDate{
-    font-size: 17px;
+    font-size: 13px;
     color: #003152;
     font-family: sans-serif;
 }
 .eventName{
- font-size: 24px;
+ font-size: 17px;
  font-weight: 600;
 }
 .eventlocate{
-    font-size: 17px;
+    font-size: 13px;
 }
 button:focus{
     outline: none;
@@ -75,3 +89,108 @@ button:focus{
 .live{
     
 }
+.eventmain{
+    color: black;
+    font-variant: normal;
+    font-family: roboto;
+}
+.eventbar{
+    height: 43px;
+    float: left;
+    margin-top: 25px;
+    width: 58%;
+    background-color: #DC143C;
+}
+.eventheadtext{
+    float: right;
+    /* padding: 18px; */
+    padding-top: 30px;
+    padding-right: 20px;
+}
+.eventgivequote{
+    position: relative;
+    top: -6px;
+}
+.eventtop{
+ height: 70px;
+}
+
+.content{
+    padding: 10px;
+    }
+    .eventImage{
+        height: 280px;
+        width: 700px;
+    }
+    .eac{
+        display: inline-flex;
+        width: 100%;
+    }
+    .eventdetails{
+        display: inline-grid;
+        width: 70%;
+        padding: 10px;
+    }
+    .eventname{
+        font-size: 20px;
+    }
+    .eventby{
+        font-size: 16px;
+    }
+    .eventlocation{
+        padding: 12px;
+        height: 145px;
+    }
+    p{
+        font-weight: 500;
+        font-size: 14px;
+    }
+    .faa{
+        margin-right: 10px;
+    }
+    .register{
+        width: 100%;
+        height: 40px;
+        font-weight: 400;
+        font-size: 20px;
+        border: none;
+        background-color: #DC143C;
+        color: white;
+    }
+    button:focus{
+        outline: none;
+    }
+    .description{
+        padding: 10px;
+        font-size: 20px;
+        font-weight: 200;
+        font-family: serif;
+    }
+    .back{
+        border: none;
+        padding: 20px;
+        font-size: 20px;
+        background: transparent;
+        color: #DC143C;
+        float: right;
+    }
+    .nodiv{
+        text-align: center;
+        padding: 10px;
+        margin-top: 30px;
+        font-size: 24px;
+    }
+    .logindiv{
+        text-align: center;
+        font-size: 20px;
+        margin-top: 10px;
+        background-color: #ffcccb;
+        padding: 10px;
+        color: #dc143c;
+        font-family: monospace;
+        border-radius: 5px;
+    }
+    .success{
+        color: green;
+        background: palegreen;
+    }
