--- a/recall/src/app/alumni/givingtous/givingtous.component.html
+++ b/recall/src/app/alumni/givingtous/givingtous.component.html
@@ -18,12 +18,14 @@
                     <div class="imgdiv">
                            <img src="{{event.image}}" alt="" width="100%" height="100%">
                     </div>
-                  <div class="eacheventlist" >
-                      <h3 class="eventName upcoming" >{{event.eventname}} </h3>
-                      <h5 class="eventDate" *ngIf='event.startdate != event.enddate '>{{event.startdate | date:'MMM d'}} - {{event.enddate | date:'MMM d'}} |    <span class="eventlocate">{{event.venue}} </span></h5>
-                      <h5 class="eventDate" *ngIf='event.startdate == event.enddate '>{{event.startdate | date:'MMM d'}}  | <span class="eventlocate">{{event.venue}} </span></h5>
-                   
-                  </div>
+                    <div class="eacheventlist" >
+                     <h3 class="eventName upcoming" >{{event.eventname}} </h3>
+                     <div>
+                        <i class="faa fa fa-calendar"></i>
+                        <span class="eventDate" *ngIf='event.startdate != event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}} - {{event.enddate | date:'EEE, MMM d, yyyy'}}     <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+                        <span class="eventDate" *ngIf='event.startdate == event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}}  <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+                       </div>
+                 </div>
             </div>
               </div>
             </mat-tab>
@@ -37,12 +39,14 @@
                      <div class="imgdiv">
                         <img src="{{event.image}}" alt="" width="100%" height="100%">
                  </div>
-               <div class="eacheventlist" >
-                   <h3 class="eventName upcoming" >{{event.eventname}} </h3>
-                   <h5 class="eventDate" *ngIf='event.startdate != event.enddate '>{{event.startdate | date:'MMM d'}} - {{event.enddate | date:'MMM d'}} |    <span class="eventlocate">{{event.venue}} </span></h5>
-                   <h5 class="eventDate" *ngIf='event.startdate == event.enddate '>{{event.startdate | date:'MMM d'}}  | <span class="eventlocate">{{event.venue}} </span></h5>
-                
-               </div>
+                 <div class="eacheventlist" >
+                  <h3 class="eventName upcoming" >{{event.eventname}} </h3>
+                  <div>
+                     <i class="faa fa fa-calendar"></i>
+                     <span class="eventDate" *ngIf='event.startdate != event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}} - {{event.enddate | date:'EEE, MMM d, yyyy'}}     <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+                     <span class="eventDate" *ngIf='event.startdate == event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}}  <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+                    </div>
+              </div>
                </div>
                </div>
             </mat-tab>
@@ -58,9 +62,11 @@
                  </div>
                <div class="eacheventlist" >
                    <h3 class="eventName upcoming" >{{event.eventname}} </h3>
-                   <h5 class="eventDate" *ngIf='event.startdate != event.enddate '>{{event.startdate | date:'MMM d'}} - {{event.enddate | date:'MMM d'}} |    <span class="eventlocate">{{event.venue}} </span></h5>
-                   <h5 class="eventDate" *ngIf='event.startdate == event.enddate '>{{event.startdate | date:'MMM d'}}  | <span class="eventlocate">{{event.venue}} </span></h5>
-                
+                   <div>
+                   <i class="faa fa fa-calendar"></i>
+                   <span class="eventDate" *ngIf='event.startdate != event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}} - {{event.enddate | date:'EEE, MMM d, yyyy'}}     <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+                   <span class="eventDate" *ngIf='event.startdate == event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}}  <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+                  </div>
                </div>
                   </div>
                </div>
@@ -84,7 +90,9 @@
     <div class="eventdetails">
 
           <h2 class="eventname">{{event.eventname}}</h2>
+          <hr class="hrline">
           <h4 class="eventby"><b>By : </b> {{event.organisedby}}</h4>
+          <hr class="hrline">
           <div class="eventlocation">
               <p  *ngIf='event.startdate != event.enddate '> <i class="faa fa fa-calendar"></i>{{event.startdate | date:'MMM d'}} - {{event.enddate | date:'MMM d'}} <span style="margin-left: 20px;"><i class="fa fa-clock-o" aria-hidden="true"></i></span> {{event.starttime}}</p>
               <p  *ngIf='event.startdate == event.enddate '> <i class="faa fa fa-calendar"></i>{{event.startdate | date:'MMM d'}} </p>
@@ -94,25 +102,15 @@
       <button class="register" (click)='registerEvent()'>Register</button>
     </div>
       </div>
-      <div class="logindiv" *ngIf='islogin'>
+      <div class="logindiv" *ngIf='islogin==false'>
          Please Login to Register
       </div>
-      <div class="logindiv success" *ngIf='login'>
+      <div class="logindiv success" *ngIf='islogin==true'>
          Registration Done Succesfull
       </div>
       <hr>
       <div class="description">
-          Ms. Niketa Dedhia, Principal Consultant, Exponent Consultancy Services (ex cs), USA, addressed the third year B. Tech students on educational opportunities in Germany. She addressed the aspiring students on 25th January, 2018 in Dasari Auditorium between 11.00 a.m and 1.00 pm.
-
-Ms. Niketa Dedhia began her session by highlighting that the educational ties between India and Germany are getting stronger day by day. The gamut of courses being offered, the facilities provided and wide range of career opportunities are attracting number of students from India to Germany.
-
-The students were enamoured by a few of the facts disclosed by the resource person. It was a surprise for them to learn that 95% of institutes in Germany offer free education. Technical universities also offer arts and humanities degree courses. To avoid extravagant use of financial resources only limited allowance is provided regularly to a student. A student can stay in Germany for 18 months even after the course and can do part-time jobs all-through. Learning German is necessary for students aspiring to go to Germany.
-
-The resource person brought to light that Germany is a cradle for numerous discoveries and has been the learning centre of many a scholars. The German universities boast of royalty incomes and offer internationally recognized degree. The universities also have Nobel laureates as their faculty members.
-
-As a Principal Consultant of ex cs she expressed that her company would take care of all the formalities required for the smooth transition of a student from India to Germany. She explained to the students how her company can help them to pursue their higher education in Germany. Exponent Consultancy Services personnel help aspiring students from initial step like reviewing the CV to applying to appropriate university to Pre-departure and travel counseling.
-
-About 476 III B.Tech students who attended the session were highly benefited by the session and had clearer vision of opportunities for Higher education in Germany.
+         <p class="desc" *ngFor='let eachline of event.description'>{{eachline}}</p>
       </div>
       <button class="back" (click)='eventregister=false'>Back to events</button>
   </div>
