--- a/recall/src/app/alumni/givingtous/givingtous.component.css
+++ b/recall/src/app/alumni/givingtous/givingtous.component.css
@@ -120,9 +120,6 @@ button:focus{
  height: 70px;
 }
 
-.content{
-    padding: 10px;
-    }
     .eventImage{
         height: 280px;
         width: 700px;
@@ -225,3 +222,106 @@ button:focus{
         cursor: none;
         background-color: grey;
     }
+
+
+
+
+
+    html, body {
+        width: 100%;
+      }
+      
+      .top1 {
+        padding: 40px 0 0 0;
+        margin-bottom: 50px;
+      }
+      
+      label, p, a, h1, div {
+        font-family: Roboto, sans-serif;
+      }
+      
+      .tab-wrap {
+        position: relative;
+        display: -webkit-box;
+        display: flex;
+      }
+      
+      input[type="radio"][name="tabs"] {
+        position: absolute;
+        z-index: -1;
+      }
+      input[type="radio"][name="tabs"]:checked + .tab-label-content label {
+        color: #003152;
+      }
+      input[type="radio"][name="tabs"]:checked + .tab-label-content .tab-content {
+        display: block;
+      }
+      input[type="radio"][name="tabs"]:nth-of-type(1):checked ~ .slide {
+        left: calc((100% / 3) * 0);
+      }
+      input[type="radio"][name="tabs"]:nth-of-type(2):checked ~ .slide {
+        left: calc((100% / 3) * 1);
+      }
+      input[type="radio"][name="tabs"]:nth-of-type(3):checked ~ .slide {
+        left: calc((100% / 3) * 2);
+      }
+      input[type="radio"][name="tabs"]:nth-of-type(4):checked ~ .slide {
+        left: calc((100% / 4) * 3);
+      }
+      input[type="radio"][name="tabs"]:first-of-type:checked ~ .slide {
+        left: 0;
+      }
+      
+      label {
+        cursor: pointer;
+        color: grey;
+        font-size: 18px;
+        box-sizing: border-box;
+        display: -webkit-inline-box;
+        display: inline-flex;
+        -webkit-box-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+                justify-content: center;
+        text-align: center;
+        height: 50px;
+        -webkit-transition: color 0.2s ease;
+        transition: color 0.2s ease;
+        width: 100%;
+      }
+      
+      .slide {
+        background: #DC143C;
+        width: calc(100% / 3);
+        height: 4px;
+        position: absolute;
+        left: 0;
+        top: calc(100% - 4px);
+        -webkit-transition: left 0.3s ease-out;
+        transition: left 0.3s ease-out;
+      }
+      
+      .tab-label-content {
+        width: 100%;
+      }
+      .tab-label-content .tab-content {
+        position: absolute;
+        top: 100px;
+        left: 16px;
+        line-height: 130%;
+        display: none;
+      }
+      
+      /* @media screen and (max-width: 800px) {
+        h1 {
+          padding: 40px 0 90px 10%;
+        }
+      
+        .tab-wrap {
+          width: 80%;
+          margin-left: 10%;
+          top: -106px;
+        }
+      } */
+
+      
