--- a/recall/src/app/alumni/givingtous/givingtous.component.html
+++ b/recall/src/app/alumni/givingtous/givingtous.component.html
@@ -7,7 +7,82 @@
   </div>
  </div>
  <div class="content">
-         <mat-tab-group  mat-stretch-tabs>
+   <div class="tab-wrap">
+     
+       <input type="radio" name="tabs" id="tab1" checked>
+       <div class="tab-label-content" id="tab1-content">
+         <label for="tab1">Ongoing Events</label>
+            <div class="tab-content">
+               <div class="nodiv" *ngIf='ongoingevents.length==0'>
+                No Ongoing Events
+               </div>
+               <div class="eventsDiv" *ngFor="let event of ongoingevents" (click)='viewEvent(event)'>
+                  <div class="imgdiv">
+                         <img src="{{event.image}}" alt="" width="100%" height="100%">
+                  </div>
+                  <div class="eacheventlist" >
+                   <h3 class="eventName upcoming" >{{event.eventname}} </h3>
+                   <div>
+                      <i class="faa fa fa-calendar"></i>
+                      <span class="eventDate" *ngIf='event.startdate != event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}} - {{event.enddate | date:'EEE, MMM d, yyyy'}}     <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+                      <span class="eventDate" *ngIf='event.startdate == event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}}  <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+                     </div>
+               </div>
+          </div>
+            </div>
+         </div>
+        
+       <input type="radio" name="tabs" id="tab2">
+       <div class="tab-label-content" id="tab2-content">
+         <label for="tab2">Upcoming Events</label>
+         <div class="tab-content">
+            <div class="nodiv" *ngIf='upcomingevents.length==0'>
+               No Upcoming Events
+              </div>
+            <div class="eventsDiv" *ngFor="let event of upcomingevents" (click)='viewEvent(event)'>
+               <div class="imgdiv">
+                  <img src="{{event.image}}" alt="" width="100%" height="100%">
+           </div>
+           <div class="eacheventlist" >
+            <h3 class="eventName upcoming" >{{event.eventname}} </h3>
+            <div>
+               <i class="faa fa fa-calendar"></i>
+               <span class="eventDate" *ngIf='event.startdate != event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}} - {{event.enddate | date:'EEE, MMM d, yyyy'}}     <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+               <span class="eventDate" *ngIf='event.startdate == event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}}  <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+              </div>
+        </div>
+         </div>
+         </div>
+       </div>
+       
+       <input type="radio" name="tabs" id="tab3">
+       <div class="tab-label-content" id="tab3-content">
+         <label for="tab3">Past Events</label>
+         <div class="tab-content">
+            <div class="nodiv" *ngIf='pastevents.length==0'>
+               No Past Events
+              </div>
+            <div class="eventsDiv" *ngFor="let event of pastevents" (click)='viewEvent(event)'>
+               <div class="imgdiv">
+                  <img src="{{event.image}}" alt="" width="100%" height="100%">
+           </div>
+         <div class="eacheventlist" >
+             <h3 class="eventName upcoming" >{{event.eventname}} </h3>
+             <div>
+             <i class="faa fa fa-calendar"></i>
+             <span class="eventDate" *ngIf='event.startdate != event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}} - {{event.enddate | date:'EEE, MMM d, yyyy'}}     <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+             <span class="eventDate" *ngIf='event.startdate == event.enddate '>{{event.startdate | date:'EEE, MMM d, yyyy'}}  <h6 class="eventlocate"><i class="faa fa fa-map-marker" style="font-size: 15px;"></i> {{event.venue}} </h6></span>
+            </div>
+         </div>
+            </div>
+         </div>
+       </div>
+   
+       
+       <div class="slide"></div>
+     
+   </div>
+         <!-- <mat-tab-group  mat-stretch-tabs>
             <mat-tab style="background-color: greenyellow;" >
                <ng-template mat-tab-label class="tabs">Ongoing </ng-template>
               <div class="tab-content">
@@ -71,7 +146,7 @@
                   </div>
                </div>
             </mat-tab>
-         </mat-tab-group>
+         </mat-tab-group> -->
  </div>
 </div>
 <div *ngIf='eventregister' class="eventmain">
