--- a/recall/src/app/alumni/alumni.component.css
+++ b/recall/src/app/alumni/alumni.component.css
@@ -289,5 +289,81 @@ button:focus{
     top: 25%;
   }
 footer{
-      background-color: #323232;
+      background-color: #28313B;
   }
+
+.foot2{
+    /* height: 80px;
+    background-color: white; */
+}
+.foot1divs{
+   width: calc(100% /3);
+   padding: 10px;
+   height: 100%;
+   display: inline-grid;
+}
+.fa{
+    border-radius: 60px;
+    box-shadow: 0px 0px 2px #888;
+    padding: 0.5em 0.6em;  
+    margin-right: 20px;
+    margin-top: 10px;
+    font-size: 20px;
+    background-color: #485461
+    ;
+}
+.fa-map-marker{
+
+}
+.fa-envelope{
+    padding: 0.6em 0.6em;
+    font-size: 18px;
+}
+.fa-phone{
+
+}
+.foot11
+{
+    margin-left: 20%;
+    margin-top: 6%;
+    color: white;
+}
+.foot1para{
+    font-weight: 600;
+    margin: 0;
+    padding: 3px 0px;
+    font-size: 15px;
+}
+.regacc{
+    width: 50%;
+    height: 45px;
+    background-color: #DC143c;
+    color: white;
+    border: none;
+    font-weight: 600;
+    margin-left: 25%;
+}
+.follow{
+    text-align: center;
+    color: white;
+}
+.follow p{    
+    padding: 17px;
+    font-weight: 600;
+    margin-bottom: -10px;
+}
+.follow .link{
+
+}
+.follow .fa{
+    border-radius: 0px;
+    margin: 3px;
+    background-color: #485461;
+    color: white;
+}
+.foot2logo{
+    float: left;
+}
+.foot2text{
+    float: right;
+}
