--- a/recall/src/app/alumni/alumni.component.html
+++ b/recall/src/app/alumni/alumni.component.html
@@ -48,23 +48,7 @@
                 </ul>
         </div>
       </div>
-  </div>
-   <!-- <div class="row navigation" #sticky style="position: sticky;top: 0;z-index: 101;">
-     <div >
-      <ul class=" text-uppercase" >
-        <li class=" img"><img class="logo " src={{logoPath}} #logo [attr.height]="logoHeight" alt="LOGO" style="  position: absolute;"></li>
-        <li class="menuElements" (click)="testimonial();display('contact')"> Contact Us </li>
-        <li class="menuElements" (click)="testimonial();display('testimonial')"> Testimonials</li>
-        <li class="menuElements" (click)="testimonial();display('gtv')"> Giving to Vidyanikethan </li>
-        <li class="menuElements">Gallery </li>
-        <li class="menuElements">Community</li>
-        <li class="menuElements">Alumni Directory</li>
-        <li class="menuElements">Alumni Chapters</li>
-        <li class="menuElements">SVET</li>
-        <div class="hd hidden-md"></div>
-    </ul>
-     </div>
-   </div> -->
+    </div>
       <div class="row content" #globalchild style="margin:1% auto auto;background-color: #E8E8E8;">
       <div class="col-3 selectables left" #leftchild >
         <div class="col" >
@@ -120,7 +104,42 @@
       </div> -->
   </div>
   <footer>
-    hello
+    <div class="foot1">
+      <div class="foot1divs">
+        <div class="foot11">
+        <img height="120px" src="assets/images/svec3.png" alt="">
+        <div class="foot11text">
+          <div class="foot1para"><i class="fa fa-envelope" aria-hidden="true"></i>{{email}}</div>
+          <div class="foot1para"><i class="fa fa-phone" aria-hidden="true"></i>+91 {{mobile}}</div>
+        </div>
+      </div>
+    </div>
+    <div class="foot1divs">
+
+    </div>
+    <div class="foot1divs">
+     <button class="regacc">Account Register </button>
+     <div class="follow">
+       <p>Follow Us On</p>
+       <div class="link">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-youtube"></a>
+        <a href="#" class="fa fa-instagram"></a>
+       </div>
+     </div>
+    </div>
+    </div>
+    <div class="foot2">
+      <div class="foot2logo">
+          
+      </div>
+      <div class="foot2text">
+
+      </div>
+    </div>
   </footer>
   </div> 
   
