--- a/recall/src/app/alumni/testimonial/testimonial.component.css
+++ b/recall/src/app/alumni/testimonial/testimonial.component.css
@@ -17,6 +17,12 @@
     float: right;
     background-color: #DC143C;
 }
+h5{
+    color: black;
+    /* align-content: center; */
+    text-align: center;
+    font-size: 30px;
+}
 .heading:after {
     content: ' ';
     position: absolute;
@@ -73,6 +79,7 @@ margin-top: 25px;
 .each{
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     padding: 10px;
+    width: 100%;
 }
 .testmonialText{
    margin-left:2%;
