--- a/recall/src/app/alumni/alumni.component.html
+++ b/recall/src/app/alumni/alumni.component.html
@@ -105,7 +105,23 @@
   </div>
   <footer>
     <div class="foot1">
+
       <div class="foot1divs">
+        <div class="qlink" style="padding-left: 70px;">
+        <div><img height="65" src="assets/images/recall-logo.jpg" alt=""></div>        
+           <p class="flinks">
+              <span class="link1">About</span>
+              <span>Chapters</span>
+              <span>Events</span>
+              <span>Gallary</span>
+              <span>Contact</span>
+           </p>
+           <p class="copyrighttext">Copyright © 2018 RecallVidyanikethan.</p>
+           <p class="copyrighttext">All rights reserved.</p>
+        </div>
+      </div>
+
+      <div class="foot1divs" style="margin-top: 0%;">
         <div class="foot11">
         <img height="120px" src="assets/images/svec3.png" alt="">
         <div class="foot11text">
@@ -114,10 +130,9 @@
         </div>
       </div>
     </div>
-    <div class="foot1divs">
 
-    </div>
     <div class="foot1divs">
+      <p class="regno">Alumni Association Registration No: <br> "302 of 2018</p>
      <button class="regacc">Account Register </button>
      <div class="follow">
        <p>Follow Us On</p>
