--- a/recall/src/app/alumni/alumni.component.css
+++ b/recall/src/app/alumni/alumni.component.css
@@ -294,30 +294,35 @@ footer{
 
 .foot2{
     height: 20px;
-    background-color: white;
+    background-color: #e8e8e8;
 }
 .foot1divs{
    width: calc(100% /3);
    padding: 10px;
    height: 100%;
-   display: inline-grid;
+   display: inline-block;   
+   vertical-align: top;
+   margin-top: 3%;
+
 }
 .fa{
-    border-radius: 60px;
-    box-shadow: 0px 0px 2px #888;
-    padding: 0.5em 0.6em;  
-    margin-right: 20px;
-    margin-top: 10px;
-    font-size: 20px;
-    background-color: #485461
-    ;
+    color: #ffffff;
+    font-size: 25px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    margin: 10px 15px;
+    vertical-align: middle;
+    background-color: #485461 ;
 }
 .fa-map-marker{
 
 }
 .fa-envelope{
-    padding: 0.6em 0.6em;
-    font-size: 18px;
+    font-size: 17px;
+    line-height: 38px;
 }
 .fa-phone{
 
@@ -325,14 +330,16 @@ footer{
 .foot11
 {
     margin-left: 20%;
-    margin-top: 6%;
     color: white;
 }
+.foot1{
+    padding: 10px 10px;
+    padding-bottom: 30px;
+}
 .foot1para{
-    font-weight: 600;
+    font-weight: 400;
     margin: 0;
-    padding: 3px 0px;
-    font-size: 15px;
+    font-size: 16px;
 }
 .regacc{
     width: 50%;
@@ -356,10 +363,47 @@ footer{
 
 }
 .follow .fa{
-    border-radius: 0px;
+    border-radius: 3px;
     margin: 3px;
     background-color: #485461;
     color: white;
+}
+.qlink{
+    width: calc(100% /2);
+    display: inline-grid;
+    color: white;
+}
+.qhead{
+    font-size: 20px;
+    font-weight: 600;
+}
+.flinks{
+    margin-top: 25px;
+}
+.flinks h4{
+    font-size: 14px;
+    text-transform: uppercase;
+    line-height: 22px;
+    letter-spacing: 2px;
+}
+.flinks span{
+    font-size: 16px;
+    padding: 0px 10px;
+    border-left: 1px solid;
+}
+.flinks .link1{
+    border: none;
+    padding-left: 0;
+}
+.copyrighttext{
+    font-size: 14px;
+    color: black;
+    margin-bottom: 0;
+}
+.regno{
+    color: black;
+    text-align: center;
+    font-size: 16px;
 }
 .foot2logo{
     float: left;
